Ignore thread (and subthread) not quite working
Categories
(Thunderbird :: Mail Window Front End, defect)
Tracking
(thunderbird_esr102 unaffected, thunderbird112 affected, thunderbird113?)
Tracking | Status | |
---|---|---|
thunderbird_esr102 | --- | unaffected |
thunderbird112 | --- | affected |
thunderbird113 | ? | --- |
People
(Reporter: mkmelin, Assigned: darktrojan)
References
Details
(Keywords: regression, Whiteboard: [Supernova3p])
Attachments
(3 files)
Ignore (sub)thread should show a notification allowing you to undo.
https://searchfox.org/comm-central/rev/cf453cf8141b76eca5dea975c29d6ed610cb229d/mail/base/content/mailCommon.js#225,229
At least ignore subthread doesn't seem to work quite right wrt the menus either. The checkmark of whether it's in an ignored subthread or not is out of sync with what the current state is.
Reporter | ||
Updated•2 years ago
|
Reporter | ||
Updated•2 years ago
|
Comment 1•2 years ago
|
||
(In reply to Magnus Melin [:mkmelin] from comment #0)
Ignore (sub)thread should show a notification allowing you to undo.
At least ignore subthread doesn't seem to work quite right wrt the menus either.
I guess the latter part makes this go beyond a mere sn-msglist issue.
Updated•2 years ago
|
Assignee | ||
Comment 2•2 years ago
|
||
I'm already looking at these. There's some really horrible code here.
Assignee | ||
Comment 3•2 years ago
|
||
... and other problems with ignoring and watching threads.
Updated•2 years ago
|
Assignee | ||
Comment 4•2 years ago
|
||
When setting up the thread tree view, we added a listener object to it in lieu of a XUL tree. But in some cases the view changed but the listener wasn't added.
Assignee | ||
Comment 5•2 years ago
|
||
The database notifies listeners about thread flag changes, using a mechanism that's supposed to be used for message flag changes.
We should be able to add the message flags to the notifications to get the right result.
Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/bbb7aa8ad7d8
Ensure notifications from all thread tree views are listened to. r=aleca
https://hg.mozilla.org/comm-central/rev/6e6b44e5e295
Fix problems with ignoring and watching threads. r=aleca
https://hg.mozilla.org/comm-central/rev/49b0cf6e492b
Fix database notifications about flag changes to threads. r=aleca
Assignee | ||
Updated•2 years ago
|
Updated•2 years ago
|
Updated•2 years ago
|
Updated•10 months ago
|
Description
•