Bug 1823548 - Fix problems with ignoring and watching threads. r=aleca

Differential Revision: https://phabricator.services.mozilla.com/D173384

--HG--
extra : rebase_source : 0dbb2068201fb7f60bcd10caa42b51608d5c10ff
extra : histedit_source : df66b561de9d77909eea35fad4ccd3e28af43d07